# events

./: .gitignore  README.md  package-lock.json  pubspec.yaml
android/: build.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: jni_interface.cpp  jni_interface.hpp
android/app/src/main/kotlin/com/tgrcode/EventsApp/: MainActivity.kt  Renderer.kt
android/app/src/main/kotlin/com/tgrcode/mealsave/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/data/: mediastore.dart  native_bridge.dart  network.dart  state.dart  types.dart
lib/views/: home.dart
lib/views/widgets/: change_name.dart  create_event.dart  events.dart  number_dialog.dart  take_picture.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
server/: Dockerfile  index.js  main.py  package-lock.json  package.json  requirements.txt
server/amplify/: team-provider-info.json
server/amplify/.config/: project-config.json
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
